--- a/traefik.yml
+++ b/traefik.yml
@@ -135,7 +135,8 @@ providers:
     # Default: "unix:///var/run/docker.sock"
     #
     endpoint: unix:///var/run/docker.sock
-
+    watch: true
+    swarmMode: true
     # Default host rule.
     #
     # Optional
