--- a/traefik.yml
+++ b/traefik.yml
@@ -24,6 +24,11 @@ global:
 entryPoints:
   web:
     address: :80
+    http:
+      redirections:
+        entryPoint:
+          to: websecure
+          scheme: https
 
   websecure:
     address: :443
