--- a/docker-compose.whoami.yml
+++ b/docker-compose.whoami.yml
@@ -10,6 +10,7 @@ services:
       - "traefik.enable=true"
       - "traefik.http.routers.whoami.rule=Host(`whoami.docker.localhost`)"
       - "traefik.http.routers.whoami.entrypoints=web"
+      #- "traefik.http.services.whoami.loadbalancer.server.port=5000"
      networks:
       - traefiknet
 networks:
